--- a/app/src/main/res/layout/activity_bebidas.xml
+++ b/app/src/main/res/layout/activity_bebidas.xml
@@ -10,12 +10,16 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="10dp">
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerLista"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="match_parent" />
     </RelativeLayout>
 
     <ImageButton
@@ -60,8 +64,4 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/agregar" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"></LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
