--- a/app/src/main/res/layout/item_articulo.xml
+++ b/app/src/main/res/layout/item_articulo.xml
@@ -15,12 +15,12 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img"
-                android:layout_width="302dp"
+                android:layout_width="wrap_content"
                 android:layout_height="150dp"
                 android:layout_margin="10dp"
                 android:layout_weight="1"
@@ -29,6 +29,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_margin="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
                 android:layout_weight="1"
@@ -53,7 +54,7 @@
                 <TextView
                     android:id="@+id/desc"
                     android:layout_width="match_parent"
-                    android:layout_height="99dp"
+                    android:layout_height="100dp"
                     android:text="TextView" />
             </LinearLayout>
         </LinearLayout>
