--- a/app/src/main/res/layout/activity_platillo.xml
+++ b/app/src/main/res/layout/activity_platillo.xml
@@ -7,6 +7,21 @@
     android:background="#000000"
     tools:context=".pplatillos.platillo">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerLista"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </RelativeLayout>
+
     <ImageButton
         android:id="@+id/btnAgregarP"
         android:layout_width="60dp"
