--- a/app/src/main/res/layout/item_platillo.xml
+++ b/app/src/main/res/layout/item_platillo.xml
@@ -6,7 +6,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="230dp"
         android:layout_margin="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
@@ -15,20 +15,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img"
-                android:layout_width="wrap_content"
-                android:layout_height="150dp"
-                android:layout_margin="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:layout_margin="5dp"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/platillo" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="230dp"
                 android:layout_margin="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
@@ -49,19 +49,29 @@
                 <TextView
                     android:id="@+id/precio"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="34dp"
                     android:text="TextView"
                     android:textColor="@color/colorAccent"
                     android:textSize="18sp"
                     app:fontFamily="@font/alata" />
 
                 <TextView
+                    android:id="@+id/ing"
+                    android:layout_width="match_parent"
+                    android:layout_height="65dp"
+                    android:text="TextView"
+                    android:textColor="#0A0101"
+                    android:textSize="18dp"
+                    app:fontFamily="@font/alata" />
+
+                <TextView
                     android:id="@+id/desc"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="78dp"
                     android:text="TextView"
                     android:textColor="@color/colorAccent"
                     app:fontFamily="@font/alata" />
+
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
