--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,7 @@
         />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/tDuxeles"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
@@ -25,6 +25,7 @@
         android:layout_marginTop="150dp"
         android:layout_marginEnd="40dp"
         android:layout_marginRight="40dp"
+        android:fontFamily="@font/alata"
         android:text="DUXELES"
         android:textColor="#FFFFFF"
         android:textSize="55sp"
