--- a/app/src/main/res/layout/item_articulo.xml
+++ b/app/src/main/res/layout/item_articulo.xml
@@ -46,19 +46,35 @@
                     android:textSize="30sp"
                     app:fontFamily="@font/alata" />
 
-                <TextView
-                    android:id="@+id/precio"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="TextView"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="18sp"
-                    app:fontFamily="@font/alata" />
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/signo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/signo"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="18sp"
+                        app:fontFamily="@font/alata" />
+
+                    <TextView
+                        android:id="@+id/precio"
+                        android:layout_width="106dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="TextViewo"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="18sp"
+                        app:fontFamily="@font/alata" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/desc"
                     android:layout_width="match_parent"
-                    android:layout_height="100dp"
+                    android:layout_height="55dp"
                     android:text="TextView"
                     android:textColor="@color/colorAccent"
                     app:fontFamily="@font/alata" />
