--- a/app/src/main/res/layout/item_platillo.xml
+++ b/app/src/main/res/layout/item_platillo.xml
@@ -6,7 +6,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="230dp"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
@@ -15,20 +15,20 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="horizontal">
 
             <ImageView
                 android:id="@+id/img"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                android:layout_margin="5dp"
+                android:layout_width="wrap_content"
+                android:layout_height="150dp"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 app:srcCompat="@drawable/platillo" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="230dp"
+                android:layout_height="match_parent"
                 android:layout_margin="5dp"
                 android:layout_marginLeft="5dp"
                 android:layout_marginRight="5dp"
@@ -46,32 +46,47 @@
                     android:textSize="30sp"
                     app:fontFamily="@font/alata" />
 
-                <TextView
-                    android:id="@+id/precio"
+                <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="34dp"
-                    android:text="TextView"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="18sp"
-                    app:fontFamily="@font/alata" />
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/signo"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/signo"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="18sp"
+                        app:fontFamily="@font/alata" />
+
+                    <TextView
+                        android:id="@+id/precio"
+                        android:layout_width="106dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="TextViewo"
+                        android:textColor="@color/colorAccent"
+                        android:textSize="18sp"
+                        app:fontFamily="@font/alata" />
+                </LinearLayout>
 
                 <TextView
                     android:id="@+id/ing"
                     android:layout_width="match_parent"
-                    android:layout_height="65dp"
+                    android:layout_height="wrap_content"
                     android:text="TextView"
-                    android:textColor="#0A0101"
-                    android:textSize="18dp"
+                    android:textColor="@color/colorAccent"
+                    android:textSize="12sp"
                     app:fontFamily="@font/alata" />
 
                 <TextView
                     android:id="@+id/desc"
                     android:layout_width="match_parent"
-                    android:layout_height="78dp"
+                    android:layout_height="41dp"
                     android:text="TextView"
                     android:textColor="@color/colorAccent"
                     app:fontFamily="@font/alata" />
-
             </LinearLayout>
         </LinearLayout>
     </androidx.cardview.widget.CardView>
